--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.16.2",
+    "ember-cli-accounting": "^2.0.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-bourbon": "^1.2.2",
@@ -40,6 +41,7 @@
     "ember-pikaday": "^2.2.3",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
+    "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
