--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-pikaday": "^2.2.3",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.16.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
